# group-assignment-api

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  pr-checks.yml
.guthub/: deploy.yml
api/: main.py
api/routers/: assign.py
api/schemas/: assign.py
api/services/: assigner.py
api/validators/: assign.py
notebooks/: greedy_approach.ipynb  optimization_approach_01.ipynb  optimization_approach_02.ipynb
notebooks/utils/: assigner.py  evaluation.py
