[tool.poetry]
name = "room-assignment-api"
version = "0.1.0"
description = ""
authors = ["dmaruyama-51 <0501awasuram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
numpy = "^2.2.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
mypy = "^1.14.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
